--- a/Pixiv_Wallpaper_for_Windows_10/String/ja/Resources.resw
+++ b/Pixiv_Wallpaper_for_Windows_10/String/ja/Resources.resw
@@ -88,7 +88,7 @@
     <value>pixivおすすめキューを取得できません</value>
   </data>
   <data name="FailToGetQueueExplanation" xml:space="preserve">
-    <value>ネットワーク接続を確認し、そして正しいアカウントとパスワードを入力してください</value>
+    <value>ネットワーク接続を確認してください</value>
   </data>
   <data name="Illustrator" xml:space="preserve">
     <value>ユーザー: </value>
@@ -206,5 +206,8 @@
   </data>
   <data name="ReLogin.Content" xml:space="preserve">
     <value>ログアウト</value>
+  </data>
+  <data name="FailToLogin" xml:space="preserve">
+    <value>資格情報の有効期限が切れました</value>
   </data>
 </root>
