--- a/Pixiv_Wallpaper_for_Windows_10/MultilingualResources/Pixiv_Wallpaper_for_Windows_10.ja.xlf
+++ b/Pixiv_Wallpaper_for_Windows_10/MultilingualResources/Pixiv_Wallpaper_for_Windows_10.ja.xlf
@@ -270,6 +270,26 @@
           <source>Credentials expired</source>
           <target state="translated">資格情報の有効期限が切れました</target>
         </trans-unit>
+        <trans-unit id="Dayly" translate="yes" xml:space="preserve">
+          <source>Dayly</source>
+          <target state="translated">デイリー</target>
+        </trans-unit>
+        <trans-unit id="Monthly" translate="yes" xml:space="preserve">
+          <source>Monthly</source>
+          <target state="translated">マンスリー</target>
+        </trans-unit>
+        <trans-unit id="Weekly" translate="yes" xml:space="preserve">
+          <source>Weekly</source>
+          <target state="translated">ウィークリー</target>
+        </trans-unit>
+        <trans-unit id="Ranking.Content" translate="yes" xml:space="preserve">
+          <source>Pixiv Ranking</source>
+          <target state="translated">ピクシブランキング</target>
+        </trans-unit>
+        <trans-unit id="RankingRefresh" translate="yes" xml:space="preserve">
+          <source>Ranking illustration queue has been updated</source>
+          <target state="translated">ランキングのイラストキューが更新しました</target>
+        </trans-unit>
       </group>
     </body>
   </file>
