--- a/Pixiv_Wallpaper_for_Windows_10/MultilingualResources/Pixiv_Wallpaper_for_Windows_10.ja.xlf
+++ b/Pixiv_Wallpaper_for_Windows_10/MultilingualResources/Pixiv_Wallpaper_for_Windows_10.ja.xlf
@@ -290,6 +290,23 @@
           <source>Ranking illustration queue has been updated</source>
           <target state="translated">ランキングのイラストキューが更新しました</target>
         </trans-unit>
+        <trans-unit id="Dark" translate="yes" xml:space="preserve">
+          <source>Dark</source>
+          <target state="translated">ダークモード</target>
+        </trans-unit>
+        <trans-unit id="Light" translate="yes" xml:space="preserve">
+          <source>Light</source>
+          <target state="translated">ライトモード</target>
+        </trans-unit>
+        <trans-unit id="ThemeSelect.Text" translate="yes" xml:space="preserve">
+          <source>Color Theme</source>
+          <target state="needs-review-translation">Color Theme</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+        </trans-unit>
+        <trans-unit id="ThemeSelectExplain.Text" translate="yes" xml:space="preserve">
+          <source>This option will be applied after the app restarts</source>
+          <target state="translated">このオプションはアプリの再起動後に適用されます</target>
+        </trans-unit>
       </group>
     </body>
   </file>
