--- a/Pixiv_Wallpaper_for_Windows_10/String/en-US/Resources.resw
+++ b/Pixiv_Wallpaper_for_Windows_10/String/en-US/Resources.resw
@@ -177,6 +177,9 @@
   <data name="CopyLink" xml:space="preserve">
     <value>The link has been copied to the clipboard</value>
   </data>
+  <data name="Dark" xml:space="preserve">
+    <value>Dark</value>
+  </data>
   <data name="DataRequestFail" xml:space="preserve">
     <value>Data request failed</value>
   </data>
@@ -227,6 +230,9 @@
   </data>
   <data name="Illustrator" xml:space="preserve">
     <value>Illustrator: </value>
+  </data>
+  <data name="Light" xml:space="preserve">
+    <value>Light</value>
   </data>
   <data name="LoadingStatus.Text" xml:space="preserve">
     <value>Loading Illustration... </value>
@@ -308,6 +314,12 @@
   </data>
   <data name="Success" xml:space="preserve">
     <value>Change wallpaper successfully</value>
+  </data>
+  <data name="ThemeSelect.Text" xml:space="preserve">
+    <value>Color Theme</value>
+  </data>
+  <data name="ThemeSelectExplain.Text" xml:space="preserve">
+    <value>This option will be applied after the app restarts</value>
   </data>
   <data name="UnknownError" xml:space="preserve">
     <value>An unknown error occurred while downloading the illustration</value>
