--- a/Pixiv_Wallpaper_for_Windows_10/String/ja/Resources.resw
+++ b/Pixiv_Wallpaper_for_Windows_10/String/ja/Resources.resw
@@ -225,4 +225,16 @@
   <data name="RankingRefresh" xml:space="preserve">
     <value>ランキングのイラストキューが更新しました</value>
   </data>
+  <data name="Dark" xml:space="preserve">
+    <value>ダークモード</value>
+  </data>
+  <data name="Light" xml:space="preserve">
+    <value>ライトモード</value>
+  </data>
+  <data name="ThemeSelect.Text" xml:space="preserve">
+    <value>Color Theme</value>
+  </data>
+  <data name="ThemeSelectExplain.Text" xml:space="preserve">
+    <value>このオプションはアプリの再起動後に適用されます</value>
+  </data>
 </root>
