订正删除账号密码的代码

--- a/Pixiv_Wallpaper_for_Windows_10/String/ja/Resources.resw
+++ b/Pixiv_Wallpaper_for_Windows_10/String/ja/Resources.resw
@@ -88,7 +88,7 @@
     <value>pixivおすすめキューを取得できません</value>
   </data>
   <data name="FailToGetQueueExplanation" xml:space="preserve">
-    <value>ネットワーク接続を確認してください</value>
+    <value>ネットワーク接続を確認してください。また、reCAPTCHAにぶつかった可能性もあるため、ログアウトしてアカウントや暗証番号を再入力してください。</value>
   </data>
   <data name="Illustrator" xml:space="preserve">
     <value>ユーザー: </value>
